--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "This README would normally document whatever steps are necessary to get your application up and running.",
   "main": "dist/app.js",
   "scripts": {
-    "start": "npm run serve",
-    "serve": "node dist/app.js",
-    "dev": "ts-node-dev src/app.ts",
-    "build": "tsc"
+    "start": "npm run build && npm run server",
+    "build": "tsc",
+    "server": "node dist/app.js",
+    "dev": "ts-node-dev src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "pg": "^8.7.1",
     "sequelize": "^6.9.0"
